# VertDesktop

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  VertDesktop.cpp  VertDesktop.h  resource.h  resources.rc  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  cmake-linux-build.yml  cmake-single-platform.yml
include/: VertAbout.h  VertDesktop.h  VertFpsCounter.h  VertKeys.h  VertMainMenu.h  VertResources.h  VertSettings.h  VertShared.h  VertStyle.h
include/widgets/: VertFormButton.h  VertFormTextInput.h  VertRegisterForm.h
src/: VertAbout.cpp  VertDesktop.cpp  VertFpsCounter.cpp  VertKeys.cpp  VertMainMenu.cpp  VertResources.cpp  VertSettings.cpp  VertStyle.cpp
src/widgets/: VertFormButton.cpp  VertFormTextInput.cpp  VertRegisterForm.cpp
